syntax = "proto3";

package micro.apps.proto.keying.v1;

option java_multiple_files = true;
option java_outer_classname = "KeyingServiceProto";
option java_package = "micro.apps.proto.keying.v1";

import "micro/apps/proto/common/v1/common.proto";

service KeyingService {
    rpc Key(KeyRequest) returns (KeyResponse);
    rpc KeyStream(stream KeyRequest) returns (stream KeyResponse) {}
}

message KeyRequest {
    micro.apps.proto.common.v1.Profile profile = 1;
    oneof entity {
        micro.apps.proto.common.v1.Person person = 2;
        micro.apps.proto.common.v1.Address address = 3;
    }
}

message KeyResponse {
    optional string key = 1;
    micro.apps.proto.common.v1.Status status = 2;
}
